[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Objects.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Game.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Control.gd" type="Script" id=4]
[ext_resource path="res://Resources/skybox_test.png" type="Texture" id=5]
[ext_resource path="res://Resources/font.tres" type="DynamicFont" id=6]
[ext_resource path="res://Resources/coins-1.wav" type="AudioStream" id=7]
[ext_resource path="res://Resources/fail-3.wav" type="AudioStream" id=8]
[ext_resource path="res://Scripts/HeartDisplay.gd" type="Script" id=9]
[ext_resource path="res://Resources/diamond.wav" type="AudioStream" id=10]
[ext_resource path="res://Scripts/Button2.gd" type="Script" id=11]

[sub_resource type="PanoramaSky" id=1]
panorama = ExtResource( 5 )

[sub_resource type="Environment" id=2]
background_mode = 2
background_sky = SubResource( 1 )
background_sky_orientation = Basis( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1 )
background_color = Color( 0, 0, 0, 0 )
background_energy = 0.4
ambient_light_color = Color( 0, 0.0235294, 0.368627, 1 )
ambient_light_energy = 1.81
dof_blur_far_enabled = true
dof_blur_far_distance = 50.0
dof_blur_far_transition = 20.0
dof_blur_far_amount = 0.01

[node name="Main" type="Node"]

[node name="Game" type="Spatial" parent="."]
script = ExtResource( 3 )

[node name="Player" parent="Game" instance=ExtResource( 1 )]

[node name="Camera" type="Camera" parent="Game"]
transform = Transform( 1, 0, 0, 0, 0.999645, -0.026648, 0, 0.026648, 0.999645, 0, 7.25451, 14.5374 )

[node name="Objects" parent="Game" instance=ExtResource( 2 )]

[node name="TimerPoints" type="Timer" parent="Game"]
autostart = true

[node name="DirectionalLight" type="DirectionalLight" parent="Game"]
transform = Transform( 1, 0, 0, 0, 0.53677, 0.843729, 0, -0.843729, 0.53677, 0, 2.44372, 0 )
light_color = Color( 0.815686, 0.807843, 1, 1 )
light_energy = 0.44
light_indirect_energy = 1.84
shadow_enabled = true
shadow_contact = 1.82

[node name="AudioCoin" type="AudioStreamPlayer" parent="Game"]
pause_mode = 2
stream = ExtResource( 7 )

[node name="AudioHit" type="AudioStreamPlayer" parent="Game"]
pause_mode = 2
stream = ExtResource( 8 )

[node name="TimerSpeedIncrease" type="Timer" parent="Game"]
wait_time = 2.0
autostart = true

[node name="AudioDiamond" type="AudioStreamPlayer" parent="Game"]
stream = ExtResource( 10 )

[node name="Control" type="Control" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.20471
margin_right = 4.20471
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupDeath" type="Popup" parent="Control"]
anchor_left = 0.25
anchor_top = 0.1
anchor_right = 0.75
anchor_bottom = 0.9
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Control/PopupDeath"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.694118 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelScore" type="Label" parent="Control/PopupDeath"]
anchor_left = 0.5
anchor_top = 0.25
anchor_right = 0.5
anchor_bottom = 0.25
margin_left = -100.0
margin_top = -20.0
margin_right = 100.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 6 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Control/PopupDeath"]
anchor_left = 0.5
anchor_top = 0.75
anchor_right = 0.5
anchor_bottom = 0.75
margin_left = -151.0
margin_top = 3.05176e-05
margin_right = -60.0
margin_bottom = 47.0
custom_fonts/font = ExtResource( 6 )
text = "Retry"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="Control/PopupDeath"]
anchor_left = 0.5
anchor_top = 0.75
anchor_right = 0.5
anchor_bottom = 0.75
margin_left = 49.0
margin_top = 3.05176e-05
margin_right = 140.0
margin_bottom = 47.0
custom_fonts/font = ExtResource( 6 )
text = "Rank"
flat = true
align = 0
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelGameScore" type="Label" parent="Control"]
margin_left = 20.0
margin_top = 20.0
margin_right = 80.0
margin_bottom = 80.0
custom_fonts/font = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeartDisplay" type="HBoxContainer" parent="Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -80.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = 80.0
grow_horizontal = 0
grow_vertical = 0
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )
[connection signal="reset" from="Game" to="Game/Player" method="_on_Game_reset"]
[connection signal="reset" from="Game" to="Game/Objects" method="_on_Game_reset"]
[connection signal="coin" from="Game/Player" to="Game" method="_on_Player_coin"]
[connection signal="dead" from="Game/Player" to="Game" method="_on_Player_dead"]
[connection signal="heart" from="Game/Player" to="Game" method="_on_Player_heart"]
[connection signal="hit" from="Game/Player" to="Game" method="_on_Player_hit"]
[connection signal="shield" from="Game/Player" to="Game" method="_on_Player_shield"]
[connection signal="timeout" from="Game/TimerPoints" to="Game" method="_on_TimerPoints_timeout"]
[connection signal="timeout" from="Game/TimerSpeedIncrease" to="Game" method="_on_TimerSpeedIncrease_timeout"]
[connection signal="button_up" from="Control/PopupDeath/Button" to="Game" method="_on_Button_button_up"]
[connection signal="pressed" from="Control/PopupDeath/Button2" to="Control/PopupDeath/Button2" method="_on_Button2_pressed"]
